--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             <p id="about">
                 EHR is the most extensive host-only mod for Among Us, featuring over 350 roles and 7 game modes. 
                 It also includes a Custom Team Assigner application to fully customize your games!
+                Remember: This isn't the official website. You can see the official website pressing the website button
+                          down below. To download press the Download button
             </p>
-            <p id="update">We will always keep you updated about the versions. But remeber: This isn't the official EHR Website! If you want to visit the official website, press the website button. To download the mod, press the big download button!</p>
+            <p id="update">We will always keep you updated about the versions.</p>
             <a id="download-button" href="https://github.com/Gurge44/EndlessHostRoles/releases/download/v4.2.0/EHR.v4.2.0.zip" target="_blank">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6rgTRjjTSgxXi4fPwK4UILj2blSyaly0oFg&s" alt="Download" id="download-image">
             </a>
